[tool.poetry]
name = "harpy3"
version = "0.3.5"
description = "Library for reading/modifying/writing header-array (HAR) files."
readme = "README.md"
authors = ["Florian Schiffmann <florian.schiffmann@vu.edu.au>",
    "Lyle Collins <Lyle.Collins@csiro.au>",
    "Sam West <sam.west@csiro.au>"
]
license = "GPLv3"

packages = [{ include = "harpy/**/*.py" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.21.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "csiroenergy"
url = "https://pkgs.dev.azure.com/csiro-energy/csiro-energy/_packaging/csiro-python-packages/pypi/simple/"
priority = "supplemental"

[project.license]
text = "GPLv3"

[project.urls]
Homepage = "https://github.com/GEMPACKsoftware/HARPY"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
